chore: disable CI auto-triggers during initial development

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: workflow_dispatch  # Manual trigger only — enable push/PR triggers when ready
 
 jobs:
   lint:
